--- a/demo-xposed/app/build.gradle
+++ b/demo-xposed/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "cn.iinti.sekiro.demoapp"
+        applicationId "cn.codec.server.rpcserver"
         minSdkVersion 19
         //noinspection ExpiredTargetSdkVersion
         targetSdkVersion 26
@@ -36,13 +36,15 @@ android {
     //在apk文件后边生成版本号信息
     android.applicationVariants.all { variant ->
         variant.outputs.all {
-            outputFileName = "sekiro-demo${defaultConfig.versionName}_${releaseTime()}.apk"
+//            outputFileName = "sekiro-demo${defaultConfig.versionName}_${releaseTime()}.apk"
+            outputFileName = "sekiro.apk"
+
         }
     }
 }
 
 static def releaseTime() {
-    return new Date().format("yyyyMMddhhmm", TimeZone.getTimeZone("UTC"))
+    return new Date().format("yyyyMMdd", TimeZone.getTimeZone("UTC"))
 }
 
 dependencies {
@@ -50,7 +52,9 @@ dependencies {
 
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
-
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+    implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.11.0'
+    implementation 'com.google.code.gson:gson:2.3.1'
 
     compileOnly 'de.robv.android.xposed:api:82'
     implementation('cn.iinti.sekiro3.business:sekiro-business-api:1.0')
